End Point Categorías

--- a/.htaccess
+++ b/.htaccess
@@ -10,20 +10,6 @@ RewriteRule ^departamentos$ controller/departamento.php [L]
 RewriteRule ^clientes$ controller/cliente.php [L]
 RewriteRule ^clientes/([0-9]+)$ controller/cliente.php?idCliente=$1 [L]
 
-RewriteRule ^sucursal$ controller/sucursal.php [L]
-RewriteRule ^sucursal/([0-9]+)$ controller/sucursal.php?idSucursal=$1 [L]
-RewriteRule ^sucursal/c=([0-9]+)$ controller/sucursal.php?idCiudad=$1 [L]
-
-RewriteRule ^servicio$ controller/servicio.php [L]
-RewriteRule ^servicio/([0-9]+)$ controller/servicio.php?idServicio=$1 [L]
-RewriteRule ^servicio/s=([0-9]+)$ controller/servicio.php?idSucursal=$1 [L]
-
-RewriteRule ^horario$ controller/horarios.php [L]
-RewriteRule ^horario/([0-9]+)$ controller/horarios.php?idHorarios=$1 [L]
-
-RewriteRule ^usuario$ controller/usuario.php [L]
-RewriteRule ^usuario/([0-9]+)$ controller/usuario.php?idUsuario=$1 [L]
-RewriteRule ^usuario/login/ controller/usuario.php [L]
-
-RewriteRule ^turnos$ controller/turno.php [L]
-RewriteRule ^turnos/([0-9]+)$ controller/turno.php?idTurno=$1 [L]
+RewriteRule ^categoria$ controller/categoria.php [L]
+RewriteRule ^categoria/([0-9]+)$ controller/categoria.php?idCategoria=$1 [L]
+RewriteRule ^categoria/c=([0-9]+)$ controller/categoria.php?idCiudad=$1 [L]
