EndPoint para Proveedores

--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,7 @@ RewriteRule ^categoria/c=([0-9]+)$ controller/categoria.php?idCliente=$1 [L]
 RewriteRule ^producto$ controller/producto.php [L]
 RewriteRule ^producto/([0-9]+)$ controller/producto.php?idProducto=$1 [L]
 RewriteRule ^producto/c=([0-9]+)$ controller/producto.php?idCliente=$1 [L]
+
+RewriteRule ^proveedor$ controller/proveedor.php [L]
+RewriteRule ^proveedor/([0-9]+)$ controller/proveedor.php?idProveedor=$1 [L]
+RewriteRule ^proveedor/c=([0-9]+)$ controller/proveedor.php?idCliente=$1 [L]
